--- a/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
+++ b/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
@@ -73,6 +73,9 @@
     <Compile Include="..\PresentationTheme.Aero.VersionInfo.cs">
       <Link>Properties\PresentationTheme.Aero.VersionInfo.cs</Link>
     </Compile>
+    <Compile Condition=" '$(IncludeCommitInfo)' == 'true' " Include="..\PresentationTheme.Aero.CommitInfo.cs">
+      <Link>Properties\PresentationTheme.Aero.CommitInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
