--- a/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
+++ b/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
@@ -57,6 +57,9 @@
     <Compile Include="..\PresentationTheme.Aero.VersionInfo.cs">
       <Link>Properties\PresentationTheme.Aero.VersionInfo.cs</Link>
     </Compile>
+    <Compile Condition=" '$(IncludeCommitInfo)' == 'true' " Include="..\PresentationTheme.Aero.CommitInfo.cs">
+      <Link>Properties\PresentationTheme.Aero.CommitInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="..\SharedPropertiesDotNet.props" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
