--- a/PresentationTheme.Aero.nuspec
+++ b/PresentationTheme.Aero.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>http://github.com/gix/PresentationTheme.Aero</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <releaseNotes></releaseNotes>
-    <description>An accurate Aero theme for WPF supporting the Aero, AeroLite and High Contrast system themes of Windows 10.</description>
+    <description>An accurate Aero theme for WPF supporting the Aero, AeroLite and High Contrast system themes of Windows 8 and Windows 10.</description>
     <tags>wpf theme aero</tags>
     <references>
       <reference file="PresentationTheme.Aero.dll"/>
@@ -19,6 +19,9 @@
     <file src="build\any\bin\PresentationTheme.Aero.dll" target="lib\net45"/>
     <file src="build\any\bin\PresentationTheme.Aero.pdb" target="lib\net45"/>
     <file src="build\any\bin\PresentationTheme.Aero.xml" target="lib\net45"/>
+    <file src="build\any\bin\PresentationTheme.Aero.Win8.dll" target="lib\net45"/>
+    <file src="build\any\bin\PresentationTheme.Aero.Win8.pdb" target="lib\net45"/>
+    <file src="build\any\bin\PresentationTheme.Aero.Win8.xml" target="lib\net45"/>
     <file src="build\any\bin\PresentationTheme.Aero.Win10.dll" target="lib\net45"/>
     <file src="build\any\bin\PresentationTheme.Aero.Win10.pdb" target="lib\net45"/>
     <file src="build\any\bin\PresentationTheme.Aero.Win10.xml" target="lib\net45"/>
@@ -30,6 +33,7 @@
     <file src="build\any\bin\PresentationTheme.HighContrast.Win10.xml" target="lib\net45"/>
     <file src="Source\PresentationTheme.Aero.targets" target="build"/>
     <file src="Source\PresentationTheme.Aero\**\*.cs" target="src\PresentationTheme.Aero"/>
+    <file src="Source\PresentationTheme.Aero.Win8\**\*.cs" target="src\PresentationTheme.Aero.Win8"/>
     <file src="Source\PresentationTheme.Aero.Win10\**\*.cs" target="src\PresentationTheme.Aero.Win10"/>
     <file src="Source\PresentationTheme.AeroLite.Win10\**\*.cs" target="src\PresentationTheme.AeroLite.Win10"/>
     <file src="Source\PresentationTheme.HighContrast.Win10\**\*.cs" target="src\PresentationTheme.HighContrast.Win10"/>
