ThemeBrowser: Correctly handle premultiplied alpha in theme PNGs
All theme PNGs have premultiplied alpha (despite the PNG spec saying
otherwise). Directly convert these PNGs to unpremultiplied after loading
so they are rendered properly. Additionally, respect a bitmap's pixel
format when picking colors.

--- a/Source/ThemeBrowser/ThemeBrowser.csproj
+++ b/Source/ThemeBrowser/ThemeBrowser.csproj
@@ -72,6 +72,7 @@
     <Compile Include="BitmapValue.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
     <Compile Include="DelegateCommand.cs" />
+    <Compile Include="DisposableStreamWrapper.cs" />
     <Compile Include="Extensions\ColorUtils.cs" />
     <Compile Include="Extensions\FrameworkExtensions.cs" />
     <Compile Include="Extensions\GeometryUtils.cs" />
