ThemeBrowser: Add background and line join/cap options to image tracing

--- a/Source/ThemeBrowser/ThemeBrowser.csproj
+++ b/Source/ThemeBrowser/ThemeBrowser.csproj
@@ -71,6 +71,7 @@
     <Compile Include="BindingProxy.cs" />
     <Compile Include="BitmapValue.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
+    <Compile Include="DataPiping.cs" />
     <Compile Include="DelegateCommand.cs" />
     <Compile Include="DisposableStreamWrapper.cs" />
     <Compile Include="Extensions\ColorUtils.cs" />
