Aero10: Fix toolbar combobox hot border

--- a/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
+++ b/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemDropShadowChrome.cs" />
     <Compile Include="TextBoxChrome.cs" />
+    <Compile Include="ThicknessMaskConverter.cs" />
     <Compile Include="TickBarEx.cs" />
     <Compile Include="TypeOfConverter.cs" />
   </ItemGroup>
