--- a/Source/PresentationTheme.HighContrast.Win10/PresentationTheme.HighContrast.Win10.csproj
+++ b/Source/PresentationTheme.HighContrast.Win10/PresentationTheme.HighContrast.Win10.csproj
@@ -54,6 +54,7 @@
     <Compile Include="SystemDropShadowChrome.cs" />
     <Compile Include="TextBoxChrome.cs" />
     <Compile Include="SystemAliasResource.cs" />
+    <Compile Include="ThicknessMaskConverter.cs" />
     <Compile Include="TickBarEx.cs" />
     <Compile Include="TypeOfConverter.cs" />
   </ItemGroup>
