Use project variables for DocumentationFile property

--- a/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
+++ b/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
@@ -29,7 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\..\build\any\bin\PresentationTheme.Aero.Win10.xml</DocumentationFile>
+    <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
