--- a/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
+++ b/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
@@ -30,7 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\..\build\any\bin\PresentationTheme.Aero.xml</DocumentationFile>
+    <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
