--- a/Tools/Markdown.ImageComparison/Markdown.ImageComparison.csproj
+++ b/Tools/Markdown.ImageComparison/Markdown.ImageComparison.csproj
@@ -40,13 +40,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.DocAsCode.Dfm">
-      <Version>2.22.3</Version>
+      <Version>2.31.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.DocAsCode.MarkdownLite">
-      <Version>2.22.3</Version>
+      <Version>2.31.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.DocAsCode.Plugins">
-      <Version>2.22.3</Version>
+      <Version>2.31.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Composition">
+      <Version>1.0.31</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
