--- a/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
+++ b/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -17,7 +17,6 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,11 +24,9 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -71,19 +68,10 @@
     <Resource Include="Resources\Progress.PulseOverlay.png" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\PresentationTheme.Aero.VersionInfo.cs">
-      <Link>Properties\PresentationTheme.Aero.VersionInfo.cs</Link>
-    </Compile>
-    <Compile Condition=" '$(IncludeCommitInfo)' == 'true' " Include="..\PresentationTheme.Aero.CommitInfo.cs">
-      <Link>Properties\PresentationTheme.Aero.CommitInfo.cs</Link>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
       <Project>{AEF7F7B0-A3F0-482A-A0E0-4D8782CABAA6}</Project>
       <Name>PresentationTheme.Aero</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="..\SharedPropertiesDotNet.props" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
