--- a/Source/PresentationTheme.HighContrast.Win10/PresentationTheme.HighContrast.Win10.csproj
+++ b/Source/PresentationTheme.HighContrast.Win10/PresentationTheme.HighContrast.Win10.csproj
@@ -10,13 +10,13 @@
     <RootNamespace>PresentationTheme.HighContrast.Win10</RootNamespace>
     <AssemblyName>PresentationTheme.HighContrast.Win10</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,11 +24,9 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -38,12 +36,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColorizeByAlphaStreamSourceExtension.cs" />
-    <Compile Include="HeaderChrome.cs" />
-    <Compile Include="HighContrastWin10Theme.cs" />
     <Compile Include="ButtonChrome.cs" />
+    <Compile Include="ColorizeByAlphaStreamSourceExtension.cs" />
     <Compile Include="DoubleUtil.cs" />
     <Compile Include="EqualsConverter.cs" />
+    <Compile Include="HighContrastWin10Theme.cs" />
+    <Compile Include="HeaderChrome.cs" />
     <Compile Include="InvertThicknessConverter.cs" />
     <Compile Include="LayoutHelper.cs" />
     <Compile Include="LessThanOrEqualBinding.cs" />
@@ -71,19 +69,10 @@
     <Resource Include="Resources\Progress.PulseOverlay.png" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\PresentationTheme.Aero.VersionInfo.cs">
-      <Link>Properties\PresentationTheme.Aero.VersionInfo.cs</Link>
-    </Compile>
-    <Compile Condition=" '$(IncludeCommitInfo)' == 'true' " Include="..\PresentationTheme.Aero.CommitInfo.cs">
-      <Link>Properties\PresentationTheme.Aero.CommitInfo.cs</Link>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
-      <Project>{aef7f7b0-a3f0-482a-a0e0-4d8782cabaa6}</Project>
+      <Project>{AEF7F7B0-A3F0-482A-A0E0-4D8782CABAA6}</Project>
       <Name>PresentationTheme.Aero</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="..\SharedPropertiesDotNet.props" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
