--- a/Source/PresentationTheme.Aero.nuspec
+++ b/Source/PresentationTheme.Aero.nuspec
@@ -22,6 +22,12 @@
     <file src="..\build\any\bin\PresentationTheme.Aero.Win8.dll" target="lib\net45"/>
     <file src="..\build\any\bin\PresentationTheme.Aero.Win8.pdb" target="lib\net45"/>
     <file src="..\build\any\bin\PresentationTheme.Aero.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.xml" target="lib\net45"/>
     <file src="..\build\any\bin\PresentationTheme.Aero.Win10.dll" target="lib\net45"/>
     <file src="..\build\any\bin\PresentationTheme.Aero.Win10.pdb" target="lib\net45"/>
     <file src="..\build\any\bin\PresentationTheme.Aero.Win10.xml" target="lib\net45"/>
@@ -34,6 +40,8 @@
     <file src="PresentationTheme.Aero.targets" target="build"/>
     <file src="PresentationTheme.Aero\**\*.cs" target="src\PresentationTheme.Aero"/>
     <file src="PresentationTheme.Aero.Win8\**\*.cs" target="src\PresentationTheme.Aero.Win8"/>
+    <file src="PresentationTheme.AeroLite.Win8\**\*.cs" target="src\PresentationTheme.AeroLite.Win8"/>
+    <file src="PresentationTheme.HighContrast.Win8\**\*.cs" target="src\PresentationTheme.HighContrast.Win8"/>
     <file src="PresentationTheme.Aero.Win10\**\*.cs" target="src\PresentationTheme.Aero.Win10"/>
     <file src="PresentationTheme.AeroLite.Win10\**\*.cs" target="src\PresentationTheme.AeroLite.Win10"/>
     <file src="PresentationTheme.HighContrast.Win10\**\*.cs" target="src\PresentationTheme.HighContrast.Win10"/>
