--- a/Source/ThemePreviewer/ThemePreviewer.csproj
+++ b/Source/ThemePreviewer/ThemePreviewer.csproj
@@ -485,6 +485,10 @@
       <Project>{8c248e14-62ed-4061-b0fb-89a8696c7103}</Project>
       <Name>PresentationTheme.AeroLite.Win10</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PresentationTheme.AeroLite.Win8\PresentationTheme.AeroLite.Win8.csproj">
+      <Project>{09BBDC8E-6DB2-4191-A101-62C3F8F0781A}</Project>
+      <Name>PresentationTheme.AeroLite.Win8</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
       <Project>{aef7f7b0-a3f0-482a-a0e0-4d8782cabaa6}</Project>
       <Name>PresentationTheme.Aero</Name>
@@ -492,6 +496,10 @@
     <ProjectReference Include="..\PresentationTheme.HighContrast.Win10\PresentationTheme.HighContrast.Win10.csproj">
       <Project>{55EF96DC-F991-42D9-B4D5-AE299AA380DC}</Project>
       <Name>PresentationTheme.HighContrast.Win10</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PresentationTheme.HighContrast.Win8\PresentationTheme.HighContrast.Win8.csproj">
+      <Project>{9583BAC9-D42A-4868-B566-19FF161EAF47}</Project>
+      <Name>PresentationTheme.HighContrast.Win8</Name>
     </ProjectReference>
     <ProjectReference Include="..\ThemeCore\ThemeCore.csproj">
       <Project>{839bcdaf-c880-4f9e-b3b6-388c2ae77156}</Project>
