--- a/Source/PresentationTheme.Aero.nuspec
+++ b/Source/PresentationTheme.Aero.nuspec
@@ -12,32 +12,63 @@
     <description>An accurate Aero theme for WPF supporting the Aero, AeroLite and High Contrast system themes of Windows 8 and Windows 10.</description>
     <tags>wpf theme aero</tags>
     <references>
-      <reference file="PresentationTheme.Aero.dll"/>
+      <group targetFramework=".NETFramework4.5">
+        <reference file="PresentationTheme.Aero.dll"/>
+      </group>
+      <group targetFramework=".NETCoreApp3.0">
+        <reference file="PresentationTheme.Aero.dll"/>
+      </group>
     </references>
+    <frameworkReferences>
+      <group targetFramework=".NETCoreApp3.0">
+        <frameworkReference name="Microsoft.WindowsDesktop.App"/>
+      </group>
+    </frameworkReferences>
   </metadata>
   <files>
-    <file src="..\build\any\bin\PresentationTheme.Aero.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win10.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10.xml" target="lib\net45"/>
     <file src="PresentationTheme.Aero.targets" target="build"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.xml" target="lib\netcoreapp3.0"/>
     <file src="PresentationTheme.Aero\**\*.cs" target="src\PresentationTheme.Aero"/>
     <file src="PresentationTheme.Aero.Win8\**\*.cs" target="src\PresentationTheme.Aero.Win8"/>
     <file src="PresentationTheme.AeroLite.Win8\**\*.cs" target="src\PresentationTheme.AeroLite.Win8"/>
