--- a/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
+++ b/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
@@ -1,77 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A6E7C65F-98F7-4297-89EA-CAD879719FD6}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PresentationTheme.Aero.Win10</RootNamespace>
-    <AssemblyName>PresentationTheme.Aero.Win10</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <FileAlignment>512</FileAlignment>
+    <TargetFrameworks>netcoreapp3.0;net45</TargetFrameworks>
+    <EnableDefaultNoneItems>false</EnableDefaultNoneItems>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="WindowsBase" />
+    <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj" />
+    <Resource Include="Resources\*.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AeroWin10Theme.cs" />
-    <Compile Include="AutoDropShadowPopup.cs" />
-    <Compile Include="ButtonChrome.cs" />
-    <Compile Include="DataGridLinesVisibilityConverter.cs" />
-    <Compile Include="DoubleUtil.cs" />
-    <Compile Include="EqualsConverter.cs" />
-    <Compile Include="HeaderChrome.cs" />
-    <Compile Include="LayoutHelper.cs" />
-    <Compile Include="MenuScrollingEnabledConverter.cs" />
-    <Compile Include="ProgressBarChrome.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoundingTabPanel.cs" />
-    <Compile Include="ScrollBarChrome.cs" />
-    <Compile Include="SystemDropShadowChrome.cs" />
-    <Compile Include="TextBoxChrome.cs" />
-    <Compile Include="ThicknessMaskConverter.cs" />
-    <Compile Include="TickBarEx.cs" />
-    <Compile Include="TypeOfConverter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="Themes\Aero.Win10.NormalColor.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Progress.MoveOverlay.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Progress.PulseOverlay.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
-      <Project>{AEF7F7B0-A3F0-482A-A0E0-4D8782CABAA6}</Project>
-      <Name>PresentationTheme.Aero</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
