Mark the theme assemblies as Visible=false
This presents them from showing up in the Solution Explorer
when the NuGet package is referenced from an SDK-style project.

--- a/Source/PresentationTheme.Aero.targets
+++ b/Source/PresentationTheme.Aero.targets
@@ -9,6 +9,7 @@
     <None Include="@(PresentationThemeAeroThemeAssembly)">
       <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Visible>false</Visible>
     </None>
   </ItemGroup>
 </Project>
