Add net472 target to theme DLLs
This is required so that they will be found by the net472-based SampleApp project.

--- a/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
+++ b/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0;net45</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0;net45;net472</TargetFrameworks>
     <EnableDefaultNoneItems>false</EnableDefaultNoneItems>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
