Disable ThemeManager hooking on .NET Core
See https://github.com/dotnet/wpf/issues/110. According to this issue,
.NET Core's tiered compilation feature breaks hooking.

--- a/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
+++ b/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
@@ -3,4 +3,8 @@
     <TargetFrameworks>netcoreapp3.0;net45;net472</TargetFrameworks>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+    <DefineConstants>NETCOREAPP;$(DefineConstants)</DefineConstants>
+  </PropertyGroup>
 </Project>
